fix(styling): Update CSS and JavaScript for home page
- Updated style.css to fix layout issues.
- Modified home.js to address a minor functionality bug.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2598,11 +2598,6 @@ input::placeholder {
   background-color: rgb(3 7 18 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:bg-green-100:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:bg-green-300:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity, 1));
